去除Toast，改为LORToast，添加展示自定义View方法  模仿新浪提示框 LORCustomMsgView
应该LORCustomMsgView改为单列模式

--- a/WeCanPay/Podfile
+++ b/WeCanPay/Podfile
@@ -7,4 +7,4 @@ pod 'RDVTabBarController', '~> 1.1.9'
 
 pod 'AFNetworking', '~> 3.0'
 pod 'CRToast', '~> 0.0.9'
-pod 'Toast', '~> 3.0'
+#pod 'Toast', '~> 3.0'
