--- a/WeCanPay/Podfile
+++ b/WeCanPay/Podfile
@@ -7,5 +7,5 @@ pod 'RDVTabBarController', '~> 1.1.9'
 
 pod 'AFNetworking', '~> 3.0'
 pod 'CRToast', '~> 0.0.9'
-
+pod 'DZNEmptyDataSet'
 #pod 'Toast', '~> 3.0'
