--- a/WeCanPay/WeCanPay/Info.plist
+++ b/WeCanPay/WeCanPay/Info.plist
@@ -36,10 +36,14 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-    <key>NSAllowsArbitraryLoads</key>
-    <true/>
-    </dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>方正兰亭纤黑.ttf</string>
+	</array>
 </dict>
 </plist>
